; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_debug.c_DebuggerSaveState.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_debug.c_DebuggerSaveState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPUDEBUGGEROP = common dso_local global i32 0, align 4
@CPUDEBUGGERCOUNT = common dso_local global i32 0, align 4
@CPUPANICSTR = common dso_local global i8* null, align 8
@CPUDEBUGGERMSG = common dso_local global i8* null, align 8
@CPUPANICARGS = common dso_local global i32* null, align 8
@CPUPANICDATAPTR = common dso_local global i8* null, align 8
@CPUPANICCALLER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"Nested panic detected:\00", align 1
@PE_kputc = common dso_local global i32 0, align 4
@CPUDEBUGGERSYNC = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4
@CPUDEBUGGERRET = common dso_local global i32 0, align 4
@CPUPANICOPTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i8*, i32*, i32, i8*, i32, i64)* @DebuggerSaveState to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DebuggerSaveState(i32 %0, i8* %1, i8* %2, i32* %3, i32 %4, i8* %5, i32 %6, i64 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i64, align 8
  store i32 %0, i32* %9, align 4
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i8* %5, i8** %14, align 8
  store i32 %6, i32* %15, align 4
  store i64 %7, i64* %16, align 8
  %17 = load i32, i32* %9, align 4
  store i32 %17, i32* @CPUDEBUGGEROP, align 4
  %18 = load i32, i32* @CPUDEBUGGERCOUNT, align 4
  %19 = icmp eq i32 %18, 1
  br i1 %19, label %23, label %20

20:                                               ; preds = %8
  %21 = load i8*, i8** @CPUPANICSTR, align 8
  %22 = icmp eq i8* %21, null
  br i1 %22, label %23, label %29

23:                                               ; preds = %20, %8
  %24 = load i8*, i8** %10, align 8
  store i8* %24, i8** @CPUDEBUGGERMSG, align 8
  %25 = load i8*, i8** %11, align 8
  store i8* %25, i8** @CPUPANICSTR, align 8
  %26 = load i32*, i32** %12, align 8
  store i32* %26, i32** @CPUPANICARGS, align 8
  %27 = load i8*, i8** %14, align 8
  store i8* %27, i8** @CPUPANICDATAPTR, align 8
  %28 = load i64, i64* %16, align 8
  store i64 %28, i64* @CPUPANICCALLER, align 8
  br label %46

29:                                               ; preds = %20
  %30 = load i32, i32* @CPUDEBUGGERCOUNT, align 4
  %31 = icmp sgt i32 %30, 1
  br i1 %31, label %32, label %45

32:                                               ; preds = %29
  %33 = load i8*, i8** %11, align 8
  %34 = icmp ne i8* %33, null
  br i1 %34, label %35, label %45

35:                                               ; preds = %32
  %36 = call i32 @kprintf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %37 = load i8*, i8** %11, align 8
  %38 = icmp ne i8* %37, null
  br i1 %38, label %39, label %44

39:                                               ; preds = %35
  %40 = load i8*, i8** %11, align 8
  %41 = load i32*, i32** %12, align 8
  %42 = load i32, i32* @PE_kputc, align 4
  %43 = call i32 @_doprnt(i8* %40, i32* %41, i32 %42, i32 0)
  br label %44

44:                                               ; preds = %39, %35
  br label %45

45:                                               ; preds = %44, %32, %29
  br label %46

46:                                               ; preds = %45, %23
  %47 = load i32, i32* %15, align 4
  store i32 %47, i32* @CPUDEBUGGERSYNC, align 4
  %48 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %48, i32* @CPUDEBUGGERRET, align 4
  %49 = load i32, i32* %13, align 4
  store i32 %49, i32* @CPUPANICOPTS, align 4
  ret void
}

declare dso_local i32 @kprintf(i8*) #1

declare dso_local i32 @_doprnt(i8*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
